kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aml-risk
  namespace: fusionx-aml
  labels:
    app: aml-risk
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: aml-risk
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate      
  template:
    metadata:
      labels:
        app: aml-risk
    spec:
      imagePullSecrets:
      - name: registry-secret
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - aml-risk
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100      
      containers:
      - name: aml-risk
        image: fra.ocir.io/lolctech/fxapiuser/aml-risk-dev:latest
        imagePullPolicy: Always
        ports:
          - name: http
            protocol: TCP
            containerPort: 8080
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "500m"          
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /aml-risk/api/v1/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /aml-risk/api/v1/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
